--- a/styles/virtbox.css
+++ b/styles/virtbox.css
@@ -119,8 +119,9 @@ hr {
 }
 /******NAVBAR******/
 nav {
-  display: inline-block;      /******MOBILE******/
+  display: grid;      /******MOBILE******/
   font-family: Raleway;
+  margin: 0 auto;
   padding: 1rem 0;
 }
 
@@ -132,8 +133,8 @@ nav a {
 nav img {
   display: inline-block;
   float: left;
-  padding: 1rem;
-  width: 8rem;
+  margin-top: 1rem;
+  width: 6rem;
 }
 
 nav ul {                  /******MOBILE******/
@@ -203,7 +204,6 @@ nav ul li a:hover, .side-nav a:hover {
     display: none;
   }
 }
-
 /******HERO******/
 .hero-background {
   background: linear-gradient(rgba(	33, 212, 253, 0.6),rgba(59, 88, 252, 0.6)),
@@ -512,7 +512,7 @@ nav ul li a:hover, .side-nav a:hover {
   background-color: #FAFBFB;
 }
 
-.col, .persona1, .persona2, .persona3, .hover-content {
+.col, .hover-content {
   box-shadow: .2rem .5rem .5rem #D5D5D5;
 }
 
@@ -555,7 +555,8 @@ nav ul li a:hover, .side-nav a:hover {
 }
 /******USER FLOWS******/
 .extend {
-  background: url('../imagesUpdated/sharing.png');
+  background-image: url('../imagesUpdated/sharing.png');
+  background-position: center;
   margin-bottom: 2.2rem;
   padding: 12rem 0;
 }
@@ -568,17 +569,18 @@ nav ul li a:hover, .side-nav a:hover {
 
 /******SKETCHES******/
 .mockupSketches {         /******MOBILE*****/
-  background: url('../imagesUpdated/pencilSketches.jpg');
+  background-image: url('../imagesUpdated/pencilSketches.jpg');
 }
 
 .digitalSketches {                /******MOBILE*****/
-  background: url('../imagesUpdated/mobileDigital.jpg');
+  background-image: url('../imagesUpdated/mobileDigital.jpg');
+  background-position: cover;
 }
 
 .mockupSketches, .digitalSketches {
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 15rem 0;     /******MOBILE*****/
+  padding: 18rem 0;     /******MOBILE*****/
 }
 
 /******USABILITY TESTS******/
@@ -609,7 +611,7 @@ nav ul li a:hover, .side-nav a:hover {
 .hifi1 {
   background: url('../imagesUpdated/hifiv1Mobile.png') no-repeat;
   background-size: cover;       /******MOBILE******/
-  padding: 17.3rem 0;
+  padding: 18rem 0;
 }
 
 .slides h4 {
@@ -624,10 +626,19 @@ nav ul li a:hover, .side-nav a:hover {
   opacity: 0.6;
 }
 
-.slides li p, .mySlides p {
+.slides li p, .slides h4, .mySlides p {
   line-height: .6cm;
   margin: 1rem auto;
-  width: 60%;
+  width: 80%;
+}
+
+.slides-bg {
+  background-color: #f9f9f9;
+  width: 100%;
+}
+
+.slides h4 {
+  margin-bottom: 0;
 }
 
 .top-g2 {
@@ -789,8 +800,12 @@ footer ul li a{
   font-size: 1.8rem;
   }
 
-  .nav-bar, .grid1, .grid2, .hover-box, .grid4 {
+ .grid2, .hover-box, .grid4 {
     width: 90%;
+  }
+
+  .grid1 {
+    width: 80%;
   }
 
   hr {                                    /******TABLET******/
@@ -865,6 +880,10 @@ footer ul li a{
     padding-top: 5.35rem;
   }
 
+  .competitors h3 {
+    margin-bottom: 5.35rem;
+  }
+
   .probsol, .takeaway1, .download-style {
     padding-bottom: 5.35rem;
   }
@@ -890,6 +909,7 @@ footer ul li a{
 /******NAVBAR******/
 .nav-bar {
   grid-area: nav-bar;
+  width: 80%;
 }
 
 nav ul li {
