edit homepage project1 color

--- a/styles/main.css
+++ b/styles/main.css
@@ -169,7 +169,7 @@ h3 {
 }
 
 .project1 {
-  background: linear-gradient(to left, #3B58FC, #6d83fd);
+  background: linear-gradient(to left, #3B58FC, #8698fd);
   padding: 7rem 0;
 }
 
