--- a/styles/TNRHumane.css
+++ b/styles/TNRHumane.css
@@ -1,13 +1,13 @@
 /******HERO******/
 .hero-background {
-  background: linear-gradient(rgba(0, 147, 233, 0.7),rgba(149, 153, 226, 0.9)),
+  background: linear-gradient(rgba(155, 81, 224, 0.6),rgba(149, 153, 226, 0.8)),
   url(../imagesUpdated/TNRProject/strays.jpg);
   background-repeat: no-repeat;           /******MOBILE******/
   background-size: cover;
 }
 
 .abbreviation {
-  color: #FE4180;
+  color: yellow;
 }
 
 @media screen and (min-width: 768px) {
