--- a/styles/TNRHumane.css
+++ b/styles/TNRHumane.css
@@ -1,6 +1,6 @@
 /******HERO******/
 .hero-background {
-  background: linear-gradient(rgba(134, 152, 253, 0.8),rgba(47, 128, 237, 0.8)),
+  background: linear-gradient(rgba(255, 96, 149, 0.7),rgba(47, 0, 117, 0.7)),
   url(../imagesUpdated/TNRProject/strays.jpg);
   background-repeat: no-repeat;           /******MOBILE******/
   background-size: cover;
@@ -10,6 +10,16 @@
   color: yellow;
 }
 
-@media screen and (min-width: 768px) {
+.solscr, .solscr2 {
+  width: 80%;
+}
 
+.solscr2 {
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+  .solscr, .solscr2 {
+    width: 70%;
+  }
 }
