--- a/styles/main.css
+++ b/styles/main.css
@@ -181,7 +181,7 @@ h3 {
 }
 
 .project2 {
-  background: linear-gradient(to left, #FB3258, #F48FB1);
+  background: linear-gradient(to left, #ed5975, #F48FB1);
   padding: 7rem 0;
 }
 
