--- a/styles/virtbox.css
+++ b/styles/virtbox.css
@@ -1054,7 +1054,7 @@ nav ul li {
      text-align: center;
    }
 
-   .digitalSketches {                /******MOBILE*****/
+   .digitalSketches {                /******TABLET*****/
      background: url('../imagesUpdated/digital.jpg');
      background-size: cover;
    }
