update hifi mobile

--- a/styles/TNRHumane.css
+++ b/styles/TNRHumane.css
@@ -49,7 +49,7 @@
 }
 
 .hifi1 {
-  background: url('../imagesUpdated/TNRProject/hifi.jpg') no-repeat;
+  background: url('../imagesUpdated/TNRProject/hifi.png') no-repeat;
   background-size: cover;
 }
 
