--- a/styles/emailTemplate.css
+++ b/styles/emailTemplate.css
@@ -1,27 +1,10 @@
-.grid2 {
-  display: grid;
-  grid-template-columns: 1fr;
-  margin: auto;
-  width: 50%;
-}
 .email {
   width: 100%;
   margin: auto;
 }
 
-@media(max-width: 768px){
-  .nav-bar, .grid2 {
-    width: 80%;
-  }
-
+@media(min-width: 768px){
   .email {
     margin-top: 4.4rem;
-  }
-}
-
-
-@media screen and (min-width: 900px) {
-  .nav-bar, .grid2 {
-    width: 70%;
   }
 }
