--- a/styles/timeline.css
+++ b/styles/timeline.css
@@ -1,23 +1,21 @@
-.grid2 {
-  display: grid;
-  grid-template-columns: 1fr;
-  margin: auto;
-  width: 50%;
-}
-.timeline {
-  width: 100%;
-  margin: auto;
-}
-
-.timeline {
-  margin-top: 0;
-}
-
-@media(max-width: 768px){
-  .nav-bar, .grid2 {
-    width: 80%;
+  .grid2 {
+    display: grid;
+    grid-template-columns: 1fr;
+    margin: auto;
+    width: 90%;
   }
 
+  .timeline {
+    width: 100%;
+    margin: auto;
+  }
+
+
+@media(min-width: 768px){
+  .grid2 {
+    width: 80%
+  }
+  
   .timeline {
     margin-top: 4.4rem;
   }
@@ -25,7 +23,13 @@
 
 
 @media screen and (min-width: 900px) {
-  .nav-bar, .grid2 {
+  .nav-bar, .grid2{
     width: 70%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .grid2 {
+    width: 50%;
   }
 }
